@@ -49,4 +49,4 @@ wait(fork({
   println("Read in $z bytes");
 
   closef($handle);
-}, $handle => $src), 10000);
+}, $handle => $src), 30000);
