@@ -1,0 +1,7 @@
+255.0
+510.0
+420.0
+0.0
+0.0
+3366.0
+15.0
